# gfs

./: .gitignore  Cargo.toml  README.md
chunkserver/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
master/: Cargo.toml
master/src/: config.rs  fs_service.rs  main.rs
master/src/fs_service/: lease.rs
proto/: Cargo.toml  build.rs
proto/proto/: client-master.proto  master-chunkserver.proto  master-client.proto
proto/src/: lib.rs
