[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }
prost = "0.14.3"
tonic = "0.14.6"
tonic-prost = "0.14.6"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread"] }
parking_lot = {version = "0.12.5", features = ["arc_lock"]}
dashmap = "6.2.1"
